# strands-evals

./: pyproject.toml
src/strands_evals/: case.py  experiment.py
src/strands_evals/evaluators/: __init__.py  correctness_evaluator.py  goal_success_rate_evaluator.py
src/strands_evals/evaluators/deterministic/: __init__.py  environment_state.py
src/strands_evals/evaluators/prompt_templates/: case_prompt_template.py
src/strands_evals/evaluators/prompt_templates/correctness/: __init__.py  correctness_v0.py  correctness_with_reference_v0.py
src/strands_evals/evaluators/prompt_templates/goal_success_rate/: __init__.py  goal_success_rate_with_assertions_v0.py
src/strands_evals/providers/: langfuse_provider.py
src/strands_evals/simulation/: __init__.py  tool_simulator.py
src/strands_evals/simulation/prompt_templates/: __init__.py  tool_override_generation.py  tool_response_generation.py
src/strands_evals/types/: __init__.py  evaluation.py
src/strands_evals/types/simulation/: tool.py
tests/strands_evals/: test_experiment.py
tests/strands_evals/evaluators/: test_correctness_evaluator.py  test_goal_success_rate_evaluator.py
tests/strands_evals/evaluators/deterministic/: test_environment_state.py
tests/strands_evals/providers/: test_langfuse_provider.py
tests/strands_evals/simulation/: test_tool_simulator.py
